--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@ Register Form
                     Gender:
                 </td>
                 <td>
-                    <select placeholder="Male">
+                    <select>
                         <option>Male</option>
                         <option>Female</option>
                         <option>Other</option>
@@ -163,7 +163,7 @@ Register Form
                             <option>+231</option>
                             <option>+232</option>
                         </select>
-                        <input type="phone" placeholder="123456..." name="">
+                        <input type="tel" value="phone" name="">
                     </td>
                 </tr>
             </table>
