--- a/index.html
+++ b/index.html
@@ -1,46 +1,44 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
     <head>
         <title>
 Register Form
         </title>
     </head>
     <body>
-    <h1 align="center">Benjamin & Kumba Academy</h1>
-    <h2 align="center">Center Street-Montserrado</h2>
-    
-    <article>
-       <h4  align="center"> <address>
-            Email:<a href="Benjaminangafua123@yahoo.com">Benjamin A. Ngafua</a>.
-        </address>
-          </h4>   
-    </article>
-    <h3 align="center">Student Registration Form</h3>
+    <h1>Benjamin & Kumba Academy</h1>
+    <h2>Center Street-Montserrado</h2>
+    <h3>Student Registration Form</h3>
     <hr> <hr>
         <form>
             <table>
+                <tbody>
                 <tr>
                     <td>
                         Name:
                     </td>
                     <td>
-                        <input type="text" placeholder="Last Name"name "">
-                        <input type="text" placeholder="First Name" name "">
-                        <input type="text" placeholder="Middle Name" name "">
+                        <input type="text" placeholder="Last Name">
+                        <input type="text" placeholder="First Name">
+                        <input type="text" placeholder="Middle Name">
                     </td>
                 </tr>
+            </tbody>
+            <tbody>
                 <tr>
                     <td>
                         Gender:
                     </td>
                     <td>
-                        <select placeholder="Male">
+                        <select>
                             <option>Male</option>
                             <option>Female</option>
                             <option>Other</option>
                         </select>
                     </td>
                 </tr>
+            </tbody>
+            <tbody>
                 <tr>
                     <td>
                         Date of Birth:
@@ -49,6 +47,8 @@ Register Form
                     <input type="date" placeholder="DD/MM/YY">
                     </td>
                 </tr>
+            </tbody>
+            <tbody>
                 <tr>
                     <td>
                         County of Origin:
@@ -73,23 +73,28 @@ Register Form
                     </select> 
                     </td>
                 </tr>
-               
+            </tbody>
+            <tbody>
                 <tr>
                     <td>
                         Password:
                     </td>
                     <td>
-                        <input type="password" placeholder="Password" password "">
+                        <input type="password" placeholder="Password">
                     </td>
                 </tr>
+            </tbody>
+           <tbody>
                 <tr>
                     <td>
                         Email:
                     </td>
                     <td>
-                       <input type="email" placeholder="@gmail.com" name=""> 
+                       <input type="email" placeholder="@gmail.com"> 
                     </td>
                 </tr>
+            </tbody>
+            <tbody>
                 <tr>
                     <td>
                         Phnoe no:
@@ -101,32 +106,37 @@ Register Form
                             <option>+231</option>
                             <option>+232</option>
                         </select>
-                        <input type="tel" placeholder="123...">
+                        <input type="tel" placeholder="123..">
                     </td>
                 </tr>
+                </tbody>
+                <tbody>
                 <tr>
                     <td>
                         <br>
                     </td>
                 </tr>
             </table>
-
             <table>
                 <tr>
                     <td> 
                         <b>Parents Information</b>
                     </td>
                 </tr>
+            </tbody>
+            <tbody>
                  <tr>
                     <td>
                       <b>Father Name:</b>
                     </td>
                     <td>
-                        <input type="text" placeholder="Last Name"name "">
-                        <input type="text" placeholder="First Name" name "">
-                        <input type="text" placeholder="Middle Name" name "">
+                        <input type="text" placeholder="Last Name">
+                        <input type="text" placeholder="First Name">
+                        <input type="text" placeholder="Middle Name">
                     </td>
                 </tr>
+                </tbody>
+                <tbody>
                 <tr>
                     <td>
                     Gender:
@@ -139,6 +149,8 @@ Register Form
                     </select>
                 </td>
                 </tr>
+                </tbody>
+                <tbody>
                 <tr>
                     <td>
                      Father's Occupation:
@@ -152,6 +164,8 @@ Register Form
                         <input type="radio" name="Occupation">Plumber
                     </td>
                 </tr>
+                </tbody>
+                <tbody>
                 <tr>
                     <td>
                         Phnoe no :
@@ -163,9 +177,10 @@ Register Form
                             <option>+231</option>
                             <option>+232</option>
                         </select>
-                        <input type="tel" value="phone" name="">
+                        <input type="tel" placeholder="123..">
                     </td>
                 </tr>
+                </tbody>
             </table>
             <tr>
                 <td>
@@ -178,9 +193,9 @@ Register Form
                        <b>Mother Name:</b>
                     </td>
                     <td>
-                        <input type="text" placeholder="Last Name"name "">
-                        <input type="text" placeholder="First Name" name "">
-                        <input type="text" placeholder="Middle Name" name "">
+                        <input type="text" placeholder="Last Name">
+                        <input type="text" placeholder="First Name">
+                        <input type="text" placeholder="Middle Name">
                     </td>
                 </tr>
                 <tr>
@@ -188,7 +203,7 @@ Register Form
                         Gender:
                     </td>
                     <td>
-                        <select placeholder="Male">
+                        <select>
                             <option>Male</option>
                             <option>Female</option>
                             <option>Other</option>
@@ -219,12 +234,12 @@ Register Form
                                 <option>+231</option>
                                 <option>+232</option>
                             </select>
-                            <input type="phone" placeholder="123456..." name="">
+                            <input type="tel" placeholder="123..">
                         </td>
                     </tr>
                     <tr>
                         <td>
-                            <input align="center" type="submit" value="Submit" name="">
+                            <input type="submit" value="Submit">
                         </td>
                     </tr>
             </table>
