--- a/index2.html
+++ b/index2.html
@@ -1,25 +1,23 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
     <head>
         <title>
             Report Card
         </title>
     </head>
     <body>
-        <img src="/home/benjaminangafua/Downloads/82263871_977301262730657_6678531809338748705_o.jpg" alt="Benjamin A. Ngafua">
         <h3>Free Pentecostal Church School</h3>
         <a href="index.html">Register Form</a>
         <p>Student Name: <u>Kollie Kpalee</u></p>
         <p> Academic Year:<u>2019-2020</u></p>
-       <table border="1" cellspacing="0">
+       <table>
            <tr>
-               <th colspan="20" bgcolor="orange">
+               <th>
                    Elementary Report Card
                </th>
            </tr>
            <tr>
-               <b>
-               <th bgcolor="blue">Subject</th>
+               <th>Subject</th>
                <th>1<sup>st</sup> <br/>Period</th>
                <th>2<sup>nd</sup> <br/>Period</th>
                <th>3<sup>rd</sup> <br/>Period</th>
@@ -31,10 +29,9 @@
                <th>Exam</th>
                <th>Sem2. Ave.</th>
                <th>Yrly. Ave.</th>
-                </b>
             </tr>
             <tr>
-               <th bgcolor="blue">Mathematics</th>
+               <th>Mathematics</th>
                <th>70</th>
                <th>80</th>
                <th>90</th>
@@ -45,10 +42,10 @@
                <th>92</th>
                <th>88</th>
                <th>88</th>
-               <th bgcolor="#33FF42">84</th>
+               <th>84</th>
             </tr>
             <tr>
-                <th bgcolor="blue">General Science</th>
+                <th>General Science</th>
                 <th>88</th>
                 <th>80</th>
                 <th>70</th>
@@ -59,10 +56,10 @@
                 <th>87</th>
                 <th>86</th>
                 <th>84</th>
-                <th bgcolor="#33FF42">86</th>
+                <th>86</th>
            </tr>
            <tr>
-                <th bgcolor="blue">Language</th>
+                <th>Language</th>
                 <th>84</th>
                 <th>85</th>
                 <th>79</th>
@@ -73,10 +70,10 @@
                 <th>92</th>
                 <th>99</th>
                 <th>97</th>
-                <th bgcolor="#33FF42">91</th>
+                <th>91</th>
             </tr>
             <tr>
-                <th bgcolor="blue">Social Studies</th>
+                <th>Social Studies</th>
                 <th>70</th>
                 <th>77</th>
                 <th>80</th>
@@ -87,40 +84,35 @@
                 <th>86</th>
                 <th>87</th>
                 <th>85</th>
-                <th bgcolor="#33FF42">82</th>
+                <th>82</th>
             </tr>
             <tr>
-                <th bgcolor="pink">Aggregate</th>
-                <th bgcolor="pink">312</th>
-                <th bgcolor="pink">322</th>
-                <th bgcolor="pink">319</th>
-                <th bgcolor="pink">336</th>
-                <th bgcolor="pink">329</th>
-                <th bgcolor="pink">348</th>
-                <th bgcolor="pink">334</th>
-                <th bgcolor="pink">357</th>
-                <th bgcolor="pink">360</th>
-                <th bgcolor="pink">357</th>
-                <th bgcolor="pink">343</th>
+                <th>Aggregate</th>
+                <th>312</th>
+                <th>322</th>
+                <th>319</th>
+                <th>336</th>
+                <th>329</th>
+                <th>348</th>
+                <th>334</th>
+                <th>357</th>
+                <th>360</th>
+                <th>357</th>
+                <th>43</th>
             </tr>
             <tr>
-                <th bgcolor="orange">Average</th>
-                <th bgcolor="orange">78</th>
-                <th bgcolor="orange">81</th>
-                <th bgcolor="orange">78</th>
-                <th bgcolor="orange">84</th>
-                <th bgcolor="orange">82</th>
-                <th bgcolor="orange">87</th>
-                <th bgcolor="orange">84</th>
-                <th bgcolor="orange">89</th>
-                <th bgcolor="orange">90</th>
-                <th bgcolor="orange">89</th>
-                <th bgcolor="#33FF42">85.75</th>
-            </tr>
-            <tr>
-                <th colspan="20" font-size="4">
-                    Method of Grading: E=90-100 Excellent VG=80-89 Very Good G=75-88 Good Below 75 Fail
-                </th>  
+                <th>Average</th>
+                <th>78</th>
+                <th>81</th>
+                <th>78</th>
+                <th>84</th>
+                <th>82</th>
+                <th>87</th>
+                <th>84</th>
+                <th>89</th>
+                <th>90</th>
+                <th>89</th>
+                <th>85.75</th>
             </tr>
        </table> 
     </body>
