--- a/index.html
+++ b/index.html
@@ -90,11 +90,11 @@ Register Form
                             Phnoe no:
                         </td>
                         <td>
-                            <select>
-                                <option>+235</option>
-                                <option>+111</option>
-                                <option>+231</option>
-                                <option>+232</option>
+                            <select placeholder="Country Code" name="code">
+                                <option value="+234">+235</option>
+                                <option value="+111">+111</option>
+                                <option value="+231">+231</option>
+                                <option value="+232">+232</option>
                             </select>
                                 <input type="tel" placeholder="0880971128">
                         </td>
@@ -149,11 +149,11 @@ Register Form
                             Phnoe no :
                         </td>
                         <td>
-                            <select>
-                                <option>+235</option>
-                                <option>+111</option>
-                                <option>+231</option>
-                                <option>+232</option>
+                            <select placeholder="Country Code" name="code">
+                                <option value="+234">+235</option>
+                                <option value="+111">+111</option>
+                                <option value="+231">+231</option>
+                                <option value="+232">+232</option>
                             </select>
                                 <input type="tel" placeholder="0880971128">
                         </td>
@@ -203,11 +203,11 @@ Register Form
                             Phnoe no :
                         </td>
                         <td>
-                            <select>
-                                <option>+235</option>
-                                <option>+111</option>
-                                <option>+231</option>
-                                <option>+232</option>
+                            <select placeholder="Country Code" name="code">
+                                <option value="+234">+235</option>
+                                <option value="+111">+111</option>
+                                <option value="+231">+231</option>
+                                <option value="+232">+232</option>
                             </select>
                             <input type="tel" placeholder="0880971128">
                         </td>
