--- a/index.html
+++ b/index.html
@@ -1,10 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
-        <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
-        <title>
-Register Form
-        </title>
+        <meta charset="UTF-8">
+        <title>Registration Form</title>
     </head>
     <body>
     <h1>Benjamin & Kumba Academy</h1>
