--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
                         Gender:
                         </td>
                         <td>
-                            <select>
+                            <select name="Gender" id="Gender">
                                 <option>Male</option>
                                 <option>Female</option>
                                 <option>Other</option>
@@ -176,7 +176,7 @@
                             Gender:
                         </td>
                         <td>
-                            <select>
+                            <select name="Gender" id="Gender">
                                 <option>Male</option>
                                 <option>Female</option>
                                 <option>Other</option>
