Week 1 first assignment: Ben first code

--- a/index.html
+++ b/index.html
@@ -1,53 +1,56 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <meta charset="UTF-8">
-        <title>Registration Form</title>
-    </head>
-    <body>
+
+<head>
+    <meta charset="UTF-8">
+    <title>Registration Form</title>
+</head>
+
+<body>
     <h1>Benjamin & Kumba Academy</h1>
     <h2>Center Street-Montserrado</h2>
     <h3>Student Registration Form</h3>
-    <hr> <hr>
-        <form method="POST">
-            <table>
-                <tbody>
-                    <tr>
-                        <td>
-                            Name:
-                        </td>
+    <hr>
+    <hr>
+    <form method="POST">
+        <table>
+            <tbody>
+                <tr>
+                    <td>
+                        Name:
+                    </td>
 
-                        <td>
-                            <input type="text" placeholder="Last Name">
-                            <input type="text" placeholder="First Name">
-                            <input type="text" placeholder="Middle Name">
-                        </td>
-                    </tr>
-                    <tr>
-                        <td>
-                            Gender:
-                        </td>
-                        <td>
-                            <select>
+                    <td>
+                        <input type="text" placeholder="Last Name">
+                        <input type="text" placeholder="First Name">
+                        <input type="text" placeholder="Middle Name">
+                    </td>
+                </tr>
+                <tr>
+                    <td>
+                        Gender:
+                    </td>
+                    <td>
+                        <select>
                                 <option>Male</option>
                                 <option>Female</option>
                                 <option>Other</option>
                             </select>
-                        </td>
-                    </tr>
-                    <tr>
-                        <td>
-                            Date of Birth:
-                        </td>
-                        <td>
-                            <input type="date">
-                        </td>
-                    </tr>
-                    <tr>
-                        <td>
-                            County of Origin:
-                        </td>
-                        <td>
+                    </td>
+                </tr>
+                <tr>
+                    <td>
+                        Date of Birth:
+                    </td>
+                    <td>
+                        <input type="date">
+                    </td>
+                </tr>
+                <tr>
+                    <td>
+                        County of Origin:
+                    </td>
+                    <td>
                         <select>
                             <option> Lofa</option>
                             <option> Bomi</option>
@@ -64,159 +67,163 @@
                             <option> River Gee</option>
                             <option> Mary Land</option>
                             <option> Nimba</option>
-                        </select> 
-                        </td>
-                    </tr>
-                    <tr>
-                        <td>
-                            Password:
-                        </td>
-                        <td>
-                            <input type="password" placeholder="Password">
-                        </td>
-                    </tr>
-                    <tr>
-                        <td>
-                            Email:
-                        </td>
-                        <td>
-                            <input type="email" placeholder="@gmail.com"> 
-                        </td>
-                    </tr>
-                    <tr>
-                        <td>
-                            Phnoe no:
-                        </td>
-                        <td>
-                            <select placeholder="Country Code" name="code">
+                        </select>
+                    </td>
+                </tr>
+                <tr>
+                    <td>
+                        Password:
+                    </td>
+                    <td>
+                        <input type="password" placeholder="Password">
+                    </td>
+                </tr>
+                <tr>
+                    <td>
+                        Email:
+                    </td>
+                    <td>
+                        <input type="email" placeholder="@gmail.com">
+                    </td>
+                </tr>
+                <tr>
+                    <td>
+                        Phnoe no:
+                    </td>
+                    <td>
+                        <select placeholder="Country Code" name="code">
                                 <option value="+234">+235</option>
                                 <option value="+111">+111</option>
                                 <option value="+231">+231</option>
                                 <option value="+232">+232</option>
                             </select>
-                                <input type="tel" placeholder="0880971128">
-                        </td>
-                    </tr>
-                    <tr>
-                        <td>
-                            <br> 
-                        </td>
-                    </tr>
-                    <tr>
-                        <td> 
-                            <b>Parents Information</b> 
-                        </td>
-                    </tr>
-                    <tr>
-                        <td>
+                        <input type="tel" placeholder="0880971128">
+                    </td>
+                </tr>
+                <tr>
+                    <td>
+                        <br>
+                    </td>
+                </tr>
+                <tr>
+                    <td>
+                        <b>Parents Information</b>
+                    </td>
+                </tr>
+                <tr>
+                    <td>
                         <b>Father Name:</b>
-                        </td>
-                        <td>
-                            <input type="text" placeholder="Last Name">
-                            <input type="text" placeholder="First Name">
-                            <input type="text" placeholder="Middle Name">
-                        </td>
-                    </tr>
-                    <tr>
-                        <td>
+                    </td>
+                    <td>
+                        <input type="text" placeholder="Last Name">
+                        <input type="text" placeholder="First Name">
+                        <input type="text" placeholder="Middle Name">
+                    </td>
+                </tr>
+                <tr>
+                    <td>
                         Gender:
-                        </td>
-                        <td>
-                            <select name="Gender" id="Gender">
+                    </td>
+                    <td>
+                        <select name="Gender" id="Gender">
                                 <option>Male</option>
                                 <option>Female</option>
                                 <option>Other</option>
                             </select>
-                        </td>
-                    </tr>
-                    <tr>
-                        <td>
+                    </td>
+                </tr>
+                <tr>
+                    <td>
                         Father's Occupation:
-                        </td>
-                        <td>
-                            <input type="radio" name="Occupation">Farmer
-                            <input type="radio" name="Occupation">Programmer
-                            <input type="radio" name="Occupation">Engineer
-                            <input type="radio" name="Occupation">Carpentar
-                            <input type="radio" name="Occupation">Masioner
-                            <input type="radio" name="Occupation">Plumber
-                        </td>
-                    </tr>
-                    <tr>
-                        <td>
-                            Phnoe no :
-                        </td>
-                        <td>
-                            <select placeholder="Country Code" name="code">
+                    </td>
+                    <td>
+                        <input type="radio" name="Occupation">Farmer
+                        <input type="radio" name="Occupation">Programmer
+                        <input type="radio" name="Occupation">Engineer
+                        <input type="radio" name="Occupation">Carpentar
+                        <input type="radio" name="Occupation">Masioner
+                        <input type="radio" name="Occupation">Plumber
+                    </td>
+                </tr>
+                <tr>
+                    <td>
+                        Phnoe no :
+                    </td>
+                    <td>
+                        <select placeholder="Country Code" name="code">
                                 <option value="+234">+235</option>
                                 <option value="+111">+111</option>
                                 <option value="+231">+231</option>
                                 <option value="+232">+232</option>
                             </select>
-                                <input type="tel" placeholder="0880971128">
-                        </td>
-                    </tr>
-                    <tr>
-                        <td>
-                            <br> 
-                        </td>
-                    </tr>
-                    <tr>
-                        <td>
+                        <input type="tel" placeholder="0880971128">
+                    </td>
+                </tr>
+                <tr>
+                    <td>
+                        <br>
+                    </td>
+                </tr>
+                <tr>
+                    <td>
                         <b>Mother Name:</b>
-                        </td>
-                        <td>
-                            <input type="text" placeholder="Last Name">
-                            <input type="text" placeholder="First Name">
-                            <input type="text" placeholder="Middle Name">
-                        </td>
-                    </tr>
-                    <tr>
-                        <td>
-                            Gender:
-                        </td>
-                        <td>
-                            <select name="Gender" id="Gender">
+                    </td>
+                    <td>
+                        <input type="text" placeholder="Last Name">
+                        <input type="text" placeholder="First Name">
+                        <input type="text" placeholder="Middle Name">
+                    </td>
+                </tr>
+                <tr>
+                    <td>
+                        Gender:
+                    </td>
+                    <td>
+                        <select name="Gender" id="Gender">
                                 <option>Male</option>
                                 <option>Female</option>
                                 <option>Other</option>
                             </select>
-                        </td>
-                    </tr>
-                    <tr>
-                        <td>
+                    </td>
+                </tr>
+                <tr>
+                    <td>
                         Mother's Occupation:
-                        </td>
-                        <td>
-                            <input type="radio" name="Occupation">Farmer
-                            <input type="radio" name="Occupation">Programmer
-                            <input type="radio" name="Occupation">Engineer
-                            <input type="radio" name="Occupation">Carpentar
-                            <input type="radio" name="Occupation">Masioner
-                            <input type="radio" name="Occupation">Plumber
-                        </td>
-                    </tr>
-                    <tr>
-                        <td>
-                            Phnoe no :
-                        </td>
-                        <td>
-                            <select placeholder="Country Code" name="code">
+                    </td>
+                    <td>
+                        <input type="radio" name="Occupation">Farmer
+                        <input type="radio" name="Occupation">Programmer
+                        <input type="radio" name="Occupation">Engineer
+                        <input type="radio" name="Occupation">Carpentar
+                        <input type="radio" name="Occupation">Masioner
+                        <input type="radio" name="Occupation">Plumber
+                    </td>
+                </tr>
+                <tr>
+                    <td>
+                        Phnoe no :
+                    </td>
+                    <td>
+                        <select placeholder="Country Code" name="code">
                                 <option value="+234">+235</option>
                                 <option value="+111">+111</option>
                                 <option value="+231">+231</option>
                                 <option value="+232">+232</option>
                             </select>
-                            <input type="tel" placeholder="0880971128">
-                        </td>
-                    </tr>
-                    <tr>
-                        <td>
-                            <input type="submit" value="submit"> 
-                        </td>
-                    </tr>
-                </tbody>
-            </table>
-        </form>
-    </body>
+                        <input type="tel" placeholder="0880971128">
+                    </td>
+                </tr>
+                <tr>
+                    <td>
+                        <input type="submit" value="submit">
+                    </td>
+                </tr>
+            </tbody>
+        </table>
+    </form>
+    <footer>
+        <a href="./index2.html">Report Card</a>
+    </footer>
+</body>
+
 </html>
